--- a/src/NormaliseCryptoWakeup.html
+++ b/src/NormaliseCryptoWakeup.html
@@ -484,24 +484,23 @@ kallcounts_bygene_fc %&gt;%
 kallcounts_bygene_fc_wide</code></pre>
 <pre><code>## # A tibble: 8,152 x 37
 ## # Groups:   Gene [8,152]
-##    Gene   RC1A    RC1B  RC2A  RC2B  RC3A  RC3B  RC4A  RC4B  RH1A  RH1B
-##    &lt;chr&gt; &lt;dbl&gt;   &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
-##  1 CNAG… 2.64  10.1    2.51  0     1.38  1.86  2.58  1.19  5.10  0    
-##  2 CNAG… 0.332  5.03   4.00  0.975 1.85  3.90  1.06  1.16  0.937 2.36 
-##  3 CNAG… 0.621  0.562  0.373 2.00  1.31  1.70  1.36  1.93  0     0.595
-##  4 CNAG… 0.764  1.63   1.97  1.57  1.76  2.11  1.58  1.51  0.489 0.524
-##  5 CNAG… 0.233  1.27   0.504 0     0.401 0.219 1.06  0.322 0.366 0    
-##  6 CNAG… 0.280  0.529  0.990 0.990 1.03  0.933 1.11  0.553 0.609 1.82 
-##  7 CNAG… 0.300  0.630  0.571 0.690 0.548 1.05  0.789 0.962 0.365 0.471
-##  8 CNAG… 0.611  0.396  1.11  1.04  0.755 0.814 0.981 1.02  0.558 1.36 
-##  9 CNAG… 0.103  0.0703 1.08  0.536 0.560 1.41  1.16  2.50  0.358 0.444
-## 10 CNAG… 0.950  0.802  0.823 1.19  0.903 1.08  0.843 0.948 0.404 1.03 
-## # … with 8,142 more rows, and 26 more variables: RH2A &lt;dbl&gt;, RH2B &lt;dbl&gt;,
-## #   RH3A &lt;dbl&gt;, RH3B &lt;dbl&gt;, RH4A &lt;dbl&gt;, RH4B &lt;dbl&gt;, YC0A &lt;dbl&gt;,
-## #   YC0B &lt;dbl&gt;, YC1A &lt;dbl&gt;, YC1B &lt;dbl&gt;, YC2A &lt;dbl&gt;, YC2B &lt;dbl&gt;,
-## #   YC3A &lt;dbl&gt;, YC3B &lt;dbl&gt;, YC4A &lt;dbl&gt;, YC4B &lt;dbl&gt;, YH1A &lt;dbl&gt;,
-## #   YH1B &lt;dbl&gt;, YH2A &lt;dbl&gt;, YH2B &lt;dbl&gt;, YH3A &lt;dbl&gt;, YH3B &lt;dbl&gt;,
-## #   YH4A &lt;dbl&gt;, YH4B &lt;dbl&gt;, YM9A &lt;dbl&gt;, YM9B &lt;dbl&gt;</code></pre>
+##    Gene   RC1A    RC1B  RC2A  RC2B  RC3A  RC3B  RC4A  RC4B  RH1A  RH1B  RH2A
+##    &lt;chr&gt; &lt;dbl&gt;   &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
+##  1 CNAG… 2.64  10.1    2.51  0     1.38  1.86  2.58  1.19  5.10  0     2.96 
+##  2 CNAG… 0.332  5.03   4.00  0.975 1.85  3.90  1.06  1.16  0.937 2.36  2.47 
+##  3 CNAG… 0.621  0.562  0.373 2.00  1.31  1.70  1.36  1.93  0     0.595 1.20 
+##  4 CNAG… 0.764  1.63   1.97  1.57  1.76  2.11  1.58  1.51  0.489 0.524 1.20 
+##  5 CNAG… 0.233  1.27   0.504 0     0.401 0.219 1.06  0.322 0.366 0     2.09 
+##  6 CNAG… 0.280  0.529  0.990 0.990 1.03  0.933 1.11  0.553 0.609 1.82  0.919
+##  7 CNAG… 0.300  0.630  0.571 0.690 0.548 1.05  0.789 0.962 0.365 0.471 0.722
+##  8 CNAG… 0.611  0.396  1.11  1.04  0.755 0.814 0.981 1.02  0.558 1.36  0.956
+##  9 CNAG… 0.103  0.0703 1.08  0.536 0.560 1.41  1.16  2.50  0.358 0.444 1.02 
+## 10 CNAG… 0.950  0.802  0.823 1.19  0.903 1.08  0.843 0.948 0.404 1.03  0.900
+## # … with 8,142 more rows, and 25 more variables: RH2B &lt;dbl&gt;, RH3A &lt;dbl&gt;,
+## #   RH3B &lt;dbl&gt;, RH4A &lt;dbl&gt;, RH4B &lt;dbl&gt;, YC0A &lt;dbl&gt;, YC0B &lt;dbl&gt;, YC1A &lt;dbl&gt;,
+## #   YC1B &lt;dbl&gt;, YC2A &lt;dbl&gt;, YC2B &lt;dbl&gt;, YC3A &lt;dbl&gt;, YC3B &lt;dbl&gt;, YC4A &lt;dbl&gt;,
+## #   YC4B &lt;dbl&gt;, YH1A &lt;dbl&gt;, YH1B &lt;dbl&gt;, YH2A &lt;dbl&gt;, YH2B &lt;dbl&gt;, YH3A &lt;dbl&gt;,
+## #   YH3B &lt;dbl&gt;, YH4A &lt;dbl&gt;, YH4B &lt;dbl&gt;, YM9A &lt;dbl&gt;, YM9B &lt;dbl&gt;</code></pre>
 </div>
 
 
